feat: login type & login test data & login api update
